--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+# Environment files
+/src/environments/environment.prod.ts
+
+# Local env files
+.env
+.env.local
+.env.*.local
